@@ -48,3 +48,18 @@ a.next {
 	border-bottom-right-radius: 2px;
 	border-top-right-radius: 2px;
 }
+
+.sync-button img.active {
+	animation-name: merrygoround;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+@keyframes merrygoround {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
